--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 <div class="content">
-  <h1>An Image is Worth Multiple Words: Learning Object Level Concepts using Multi-Concepts Prompts Learning</h1>
+  <h1>An Image is Worth Multiple Words: Discovering Object Level Concepts using Multi-Concepts Prompts Learning</h1>
   <p id="authors">
     <a href="https://chenjin.netlify.app/">Chen Jin<sup>1</sup></a> 
     <a href="https://rt416.github.io/">Ryutaro Tanno<sup>2</sup></a> 
@@ -227,12 +227,14 @@
 
 <div class="content">
   <h4>BibTex</h4>
-  <p> @article{jin2023image,<br>
-  &nbsp;&nbsp;title={An Image is Worth Multiple Words: Learning Object Level Concepts using Multi-Concept Prompt Learning},<br>
-  &nbsp;&nbsp;author={Jin, Chen and Tanno, Ryutaro and Saseendran, Amrutha and Diethe, Tom and Teare, Philip},<br>
-  &nbsp;&nbsp;journal={arXiv preprint arXiv:2310.12274},<br>
-  &nbsp;&nbsp;year={2023}<br>
-  } </p>
+  <p> @inproceedings{<br>
+    anonymous2024an,<br>
+    title={An Image is Worth Multiple Words: Discovering Object Level Concepts using Multi-Concept Prompt Learning},<br>
+    author={Anonymous},<br>
+    booktitle={Forty-first International Conference on Machine Learning},<br>
+    year={2024},<br>
+    url={https://openreview.net/forum?id=F3x6uYILgL}<br>
+    } </p>
 <br>
 </div>
 </body>
