--- a/index.html
+++ b/index.html
@@ -30,8 +30,12 @@
         </p>
   </font>
   <br>
-  <img src="./docs/teaser.png" class="teaser-gif" style="width:100%;"><br>
+  <img src="./docs/teaser.jpg" class="teaser-gif" style="width:100%;"><br>
   <h4 style="text-align:center"><em>Multi-Concept Prompt Learning (MCPL) pioneers the novel task of mask-free text-guided learning for multiple prompts from one scene. Our approach not only enhances current methodologies but also paves the way for novel applications, such as facilitating knowledge discovery through natural language-driven interactions between humans and machines. </em></h4>
+</div>
+
+<div class="content">
+  <img style="width: 100%;" src="./docs/teaser.gif" alt="teaser.">
 </div>
 
 <div class="content">
