--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <a href="https://arxiv.org/abs/2310.12274" target="_blank">Paper</a> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://github.com/AstraZeneca/MCPL/tree/master" target="_blank">Code</a> &nbsp;&nbsp;&nbsp;&nbsp;
           <a href="https://github.com/AstraZeneca/MCPL/tree/master/dataset" target="_blank">Dataset</a> &nbsp;&nbsp;&nbsp;&nbsp;
-          <a href="https://www.youtube.com/watch?v=n4irrHj8xIA" target="_blank">Video</a>
+          <a href="https://www.youtube.com/watch?v=EXnyT-JVG5U" target="_blank">Video</a>
         </p>
   </font>
   <br>
